src/routes/Chronicle/style.css
.ContentColumnContainer {
   max-width: 700px;
   /* max-width: 56vw; // test on big screen */
}

.ChronicleCard {
   width: 100%;
   height: 500px;
   /* height: 40vw; // test on big screen */
}

.LeftArrow {
   position: relative;
   bottom: 140px;
   right: 36px;
}

.RightArrow {
   position: relative;
   bottom: 140px;
   left: 80px;
}

.AddSomething {
   position: relative;
   left: 200px;
   bottom: 500px;
}

@media (max-width: 1400px) {
   .AddSomething {
      left: 46px;
   }
   .ContentColumnContainer {
      max-width: 700px;
   }
   .ChronicleCard {
      height: 500px;
   }
}

@media (max-width: 840px) {
   .LeftArrow {
      position: unset;
      /* float: left; */
      margin: 8px ;
   }
   .RightArrow {
      position: unset;
      float: right;
      z-index: 3;
      margin-top: 12px;
      margin-right: 36px;
   }
   .AddSomething {
      left: 42vw;
      display: inline-block;
      top: 12px;
   }
   .ChronicleCard {
      min-height: 100%;
      height: 66vw;
   }
   .ContentColumnContainer {
      max-width: unset;
   }
}

